commit envelopes having Eq Deletes separately